--- a/pizza_shop/views/new.erb
+++ b/pizza_shop/views/new.erb
@@ -13,7 +13,7 @@
   </select>
 
   <label for="quantity"> Quantity: </label>
-  <input id="quantity" type="number" name="quantity">
+  <input id="quantity" type="number" name="quantity" required>
 
   <input type="submit" value="Order pizza">
 
