Adds some minor changes

--- a/restful_pizza_shop_lab/views/show.erb
+++ b/restful_pizza_shop_lab/views/show.erb
@@ -8,7 +8,7 @@
 
 
 <form action="/pizza-orders/<%= @order.id%>/delete" method="post">
-  <input type="submit" value="Order deleted">
+  <input type="submit" value="Delete order">
 </form>
 
 <form action="/pizza-orders/<%= @order.id%>/edit" method="get">
