Adds minor changes

--- a/restful_pizza_shop_lab/views/new.erb
+++ b/restful_pizza_shop_lab/views/new.erb
@@ -1,4 +1,5 @@
-
+<!-- action indicates where to send form data when form is
+     submitted -->
 <form action="/pizza-orders" method="post">
 
   <label for="first-name"> First Name: </label>
