--- a/restful_pizza_shop_lab/views/index.erb
+++ b/restful_pizza_shop_lab/views/index.erb
@@ -1,8 +1,11 @@
 <h1>All Pizza Orders</h1>
 
+
 <% @orders.each do |order| %>
+<div>
 <p>Name: <%= order.pretty_name() %> </p>
 <p>Order: <%= order.quantity() %> x  <%= order.topping %> </p>
 <p> <a href="/pizza-orders/<%= order.id %>"> Show Order </a></p>
+</div>
 <hr/>
 <% end %>
